--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -5,7 +5,7 @@
 
     <a href="{{ path('app_bonplan_index') }}" class="btn btn-success mb-3">Retour</a>
 
-    {{ include('bonplan/_form.html.twig', {'button_label': 'modifier'}) }}
+    {{ include('reservation/_form.html.twig', {'button_label': 'modifier'}) }}
 
     
 
